src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.card-body {
    @apply p-4;
}

.collapse-title {
    @apply p-4;
}

.max-w-90 {
    max-width: 90%;
}

.loading-lg {
    width: 4rem;
}

.combobox-options-div {
    @apply absolute top-20 mt-2 max-h-60 w-full overflow-auto rounded-md bg-neutral;
}

.combobox-option {
    @apply relative text-white text-center select-none py-2;
}

.tab-group {
    @apply flex space-x-1 rounded-xl bg-neutral p-1;
}

.tab-option {
    @apply w-full rounded-lg py-2.5 font-semibold focus:outline-none;
}

.tab-option-selected {
    @apply bg-accent text-accent-content;
}

.input::placeholder {
    opacity: 0.5;
}

.max-h-half-screen {
    max-height: 50vh;
}

.no-scrollbar::-webkit-scrollbar {
    display: none;
}

.no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.pot-size {
    @apply m-2 p-2 text-xl md:text-2xl font-bold text-center rounded-full focus:outline-none;
}

.pot-size-selected {
    @apply bg-primary text-white;
}

/* Dark mode custom pot size placeholder text */
html[data-theme="dark"] .pot-size-selected::placeholder {
    @apply text-white/50;
}

/* Light mode custom pot size placeholder text */
html[data-theme="light"] .pot-size::placeholder {
    @apply text-black/50;
}

html[data-theme="light"] .pot-size-selected::placeholder {
    @apply text-white/65;
}

.btn-close {
    @apply btn btn-sm btn-ghost;
    border-radius: 9999px;
    padding: 0;
}

.btn-close:focus-visible {
    @apply outline-0;
}

.dropdown-center .dropdown-content {
    @apply left-1/2 transform -translate-x-1/2;
}

.btn-prune {
    @apply bg-prune text-warning-content border border-transparent;
}

.btn-prune:hover {
    background-color: color-mix(in oklab, theme('colors.prune'), black 10%);
    border-color: color-mix(in oklab, theme('colors.prune'), black 10%);
}

.alert {
    @apply whitespace-normal md:whitespace-nowrap;
}

@keyframes popover-animation {
    0% {
        opacity: 0;
        transform: scale(0.95);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.popover-enter {
    transform-origin: bottom;
    animation: popover-animation 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.popover-image {
    @apply object-scale-down max-h-[80vh] max-w-[80vw] md:max-h-[50vh] md:max-w-[50vw];
}

/* Make cursor-pointer override cursor style for all children */
.cursor-pointer, .cursor-pointer * {
    cursor: pointer !important;
}

.btn-error {
    color: #eee;
}

/* Prevent iOS zooming in when textarea focused */
.textarea {
    @apply text-base;
}

